--- a/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -83,11 +83,23 @@
     <Compile Include="UserInterface Forms\frmDashboard.Designer.cs">
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserInterface Forms\frmFines.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface Forms\frmFines.Designer.cs">
+      <DependentUpon>frmFines.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface Forms\frmHistory.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UserInterface Forms\frmHistory.Designer.cs">
       <DependentUpon>frmHistory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserInterface Forms\frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface Forms\frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="UserInterface.cs">
       <SubType>Form</SubType>
@@ -111,11 +123,20 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserInterface Forms\frmBooks.resx">
+      <DependentUpon>frmBooks.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserInterface Forms\frmDashboard.resx">
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface Forms\frmFines.resx">
+      <DependentUpon>frmFines.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserInterface Forms\frmHistory.resx">
       <DependentUpon>frmHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface Forms\frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface.resx">
       <DependentUpon>UserInterface.cs</DependentUpon>
